--- a/template/404.html
+++ b/template/404.html
@@ -18,6 +18,7 @@
             }
             .text-box {
                 display: table-cell;
+                font-size: 100px;
             }
         </style>
     </head>
@@ -25,7 +26,7 @@
     <body>
         <div class="contents">
             <div class="text-box">
-                <h1>잘못된 접근입니다.</h1>
+                <b>잘못된 접근입니다.</b>
             </div>
         </div>
     </body>
